--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1>HOME</h1>
-<h2><%= @title %></h2>
+<h2><%= @article.title %></h2>
+<h2><%= @article.content %></h2>
 
 <%# このリンクだと、URLが変わった時に変更が必要 %>
 <a href="/about">About</a>
